fix: custom events corrected and generating last period of the month added